tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_trait_inheritance_missing_parent_implementation/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: The trait bound `Struct: Foo` is not satisfied
  ┌─ src/main.nr:4:24
  │
4 │         pub trait Bar: Foo {}
  │                        --- required by this bound in `Bar`
  ·
8 │         impl Bar for Struct {}
  │                      ------ The trait `Foo` is not implemented for `Struct`
  │

Aborting due to 1 previous error
