tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_trait_inheritance_missing_parent_implementation/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The trait bound `Struct: Foo` is not satisfied
  ┌─ src/main.nr:4:24
  │
4 │         pub trait Bar: Foo {}
  │                        --- required by this bound in `Bar`
  ·
8 │         impl Bar for Struct {}
  │                      ------ The trait `Foo` is not implemented for `Struct`
  │

Aborting due to 1 previous error
